# mosiac-test

./: .gitignore  README.md  docker-compose.yml  index.html  init.vim  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PR_template.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci.yml  deploy-ui.yml
assets/: index-B-Gj-rWP.js  index-B19rdop8.css
docker/: Dockerfile
frontend/mosaic-ui/: THEME_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/mosaic-ui/src/: App.tsx  PlayerControl.tsx  RosbagSelector.tsx  ThemeContext.tsx  ThemeToggle.tsx  VideoPanel.tsx  VideoPlayer.tsx  index.css
frontend/poc-server/: app.py  lidarpoc.py  nod.ipynb  processor.py
src/: ingest.py  main.py  nucleus_explore.py
src/pipeline/: extract.py
src/repository/: repository.py  rosbag.py
src/server/: models.py  processor.py  server.py  server_test.py
src/server/executors/: __init__.py  stages.py
src/server/mcap_catalog/: __init__.py  create_catalog.py
tests/: conftest.py  test_pipeline.py  test_processor.py  test_repository.py
tests/data/a2d2_tiny/: a2d2_test.json  a2d2_train.json  a2d2_val.json
tests/data/sensor_data_20250916_161600/: metadata.yaml  sensor_data_20250916_161600_0.mcap
tests/data/sensor_data_20250916_162938/: metadata.yaml  sensor_data_20250916_162938_0.mcap
tests/data/synthetic_images_1760323041/: metadata.yaml  synthetic_images_1760323041_0.mcap
