[build-system]
 requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Mosaic"
version = "0.1.0"
description = "A short description of your package" # A brief description # TODO:
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" } # TODO:
authors = [
    { name = "Your Name", email = "your.email@example.com" }, # TODO:
]
dependencies = [

]

[project.scripts]
mosaic = "main:mosaic"

[project.urls]
Repository = "https://github.com/RyanSGoldberg/mosaic"