[build-system]
 requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Mosaic"
version = "0.1.0"
description = "A multi-tool for vehicular sensor data processing and visualization"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Gabriel Brookman", email = "gbrookma@andrew.cmu.edu" },
    { name = "Jenny Qu", email = "jinrongq@andrew.cmu.edu" },
    { name = "Raghavi Shirur", email = "rshirur@andrew.cmu.edu"  },
    { name = "Ryan Goldberg", email = "ryangold@andrew.cmu.edu" },
    { name = "Vedang Joshi", email = "vedangj@andrew.cmu.edu" },
    { name = "Yi Shi", email = "yishi3@andrew.cmu.edu" },
]
dependencies = [
    "pyfakefs",
    "sqlmodel",
    "termcolor",
    "pathlib"
]

[project.scripts]
mosaic = "main:mosaic"

[project.urls]
Repository = "https://github.com/RyanSGoldberg/mosaic"