[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "Mosaic"
version = "0.1.0"
description = "A multi-tool for vehicular sensor data processing and visualization"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Gabriel Brookman", email = "gbrookma@andrew.cmu.edu" },
    { name = "Jenny Qu", email = "jinrongq@andrew.cmu.edu" },
    { name = "Raghavi Shirur", email = "rshirur@andrew.cmu.edu"  },
    { name = "Ryan Goldberg", email = "ryangold@andrew.cmu.edu" },
    { name = "Vedang Joshi", email = "vedangj@andrew.cmu.edu" },
    { name = "Yi Shi", email = "yishi3@andrew.cmu.edu" },
]
dependencies = [
    "sqlmodel (>=0.0.25,<0.0.26)",
    "termcolor (>=3.1.0,<4.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "av (>=15.1.0,<16.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]

[project.scripts]
mosaic = "main:mosaic"

[project.urls]
Repository = "https://github.com/RyanSGoldberg/mosaic"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pyfakefs (>=5.9.3,<6.0.0)",
    "lark (>=1.3.0,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
uipoc = [
    "fastapi[standard] (>=0.117.1,<0.118.0)"
]
poc = [
    "mcap (>=1.3.0,<2.0.0)",
    "mcap-ros2-support (>=0.5.5,<0.6.0)",
    "open3d-cpu (>=0.19.0,<0.20.0)",
]

